# q1k3

./: map_packer
.claude/: settings.local.json
q1k3_cpp/: CMakeLists.txt
q1k3_cpp/src/: main.cpp
q1k3_cpp/src/assets/: map.cpp  map.h
q1k3_cpp/src/core/: math_utils.cpp  math_utils.h  vec3.cpp  vec3.h
q1k3_cpp/src/game/: audio.cpp  audio.h  entity.cpp  entity.h  entity_barrel.cpp  entity_barrel.h  entity_door.cpp  entity_door.h  entity_enemy.cpp  entity_enemy.h  entity_light.cpp  entity_light.h  entity_particle.cpp  entity_particle.h  entity_pickup.cpp  entity_pickup.h  entity_player.cpp  entity_player.h  entity_projectile.cpp  entity_projectile.h  entity_torch.cpp  entity_torch.h  entity_trigger_level.cpp  entity_trigger_level.h  game.cpp  game.h  timer.cpp  timer.h  ui.cpp  ui.h  weapons.cpp  weapons.h
q1k3_cpp/src/platform/: input.cpp  input.h  platform.cpp  platform.h
q1k3_cpp/src/renderer/: model.cpp  renderer.cpp  renderer.h  texture.cpp  textures.h  ttt.cpp  ttt.h
